# JADS_Healthcare

./: .gitignore  .rtd-environment.yml  LICENSE.rst  Makefile  README.rst  Test.ipynb  environment.yml  preprocessing.ipynb  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md
data/processed/: X_test.parquet  X_test_DzN_DummyN_SsN.parquet  X_test_DzN_DummyN_SsY.parquet  X_test_DzN_DummyY_SsN.parquet  X_test_DzN_DummyY_SsY.parquet  X_test_DzY_DummyN_SsN.parquet  X_test_DzY_DummyN_SsY.parquet  X_test_DzY_DummyY_SsN.parquet  X_test_DzY_DummyY_SsY.parquet  X_train.parquet  X_train_DzN_DummyN_SsN.parquet  X_train_DzN_DummyN_SsY.parquet  X_train_DzN_DummyY_SsN.parquet  X_train_DzN_DummyY_SsY.parquet  X_train_DzY_DummyN_SsN.parquet  X_train_DzY_DummyN_SsY.parquet  X_train_DzY_DummyY_SsN.parquet  X_train_DzY_DummyY_SsY.parquet  X_vali.parquet  X_vali_DzN_DummyN_SsN.parquet  X_vali_DzN_DummyN_SsY.parquet  X_vali_DzN_DummyY_SsN.parquet  X_vali_DzN_DummyY_SsY.parquet  X_vali_DzY_DummyN_SsN.parquet  X_vali_DzY_DummyN_SsY.parquet  X_vali_DzY_DummyY_SsN.parquet  X_vali_DzY_DummyY_SsY.parquet  output_dataset.parquet  y_test.csv  y_test_DzN_DummyY_SsY.csv  y_train.csv  y_train_DzN_DummyY_SsN.csv  y_vali.csv  y_vali_DzN_DummyY_SsY.csv
data/raw/: Brondata_Knie_Operaties_DZ.xlsx  Brondata_Knie_Operaties_DZ_v2.xlsx
docs/: Makefile  commands.rst  conf.py  index.rst  make.bat  project_organization.rst
models/: model_ebm_DzY.sav
notebooks/: Data_viz_altair.ipynb  EDA Missing Values Y-componenten.ipynb
reports/: EDA preprocessing missing values.ipynb
(+12 files in other folders)
